Ensure all browser collection links are the same size
AMP Loss now uses 3 lines of text, so it could cause the layout of the
browser page to get messed up if it appeared in the wrong place.

This change forces all link boxes to be the same size, so they get
laid out nicely.

--- a/ampweb/static/css/global.css
+++ b/ampweb/static/css/global.css
@@ -760,7 +760,7 @@ table#amp-matrix td:first-child:last-child {
 }
 
 /* --------------------------------------------------------------------------
- * Matrix cell colours (HSL format for humans and modern browsers)
+ * Matrix cell colours (HSL format for humans and modern trowsers)
  * -------------------------------------------------------------------------- */
 
 td.test-none    { background-color: #eee; }
@@ -951,6 +951,10 @@ a.mesh_link:hover {
 }
 
 div.schedule-info {
+}
+
+.collist-item {
+    height: 120px;
 }
 
 .select2-results__group {
